2006-05-13  Yevgen Muntyan  <muntyan@math.tamu.edu>
    pystuff.py: Escape filename using quotes, not apostrophe.

2006-05-13  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Updated printing code for changes in gtk api.

2006-05-12  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Fixed MooIconView background bug.

2006-05-12  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Added pygtk warning pattern for python output pane.

2006-05-10  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Added run-script command for MooApp: writing "s<script>\0" to input
    pipe executes <script>.

2006-05-10  Yevgen Muntyan  <muntyan@math.tamu.edu>
    There is a single win32 installer now, and medit picks up python if it's present
    on startup: medit is not linked to pythonxx.dll, python support has been moved
    into pymo2x plugins.

2006-05-09  Andreas Hanke  <a_ha@users.sourceforge.net>
    Removed CFLAGS from AM_CFLAGS; fixed ACLOCAL_FLAGS business.

2006-05-08  Yevgen Muntyan  <muntyan@math.tamu.edu>
    Removed MooAction, using GtkAction now.

2006-05-08  Yevgen Muntyan  <muntyan@math.tamu.edu>

    * === Released 0.6.98 ===

    Added printing support for gtk-2.9.
        Printing support in gtk is not stable yet, and will likely change
        in future, therefore printing in medit must be explicitely enabled by
        --enable-printing argument to configure.
    Fixed drawing bug when opening big files.
    Made window panes save their position after changing it by drag-n-drop.
    Build fixes on AMD Linux, other bug fixes.

2006-05-04  Yevgen Muntyan  <muntyan@math.tamu.edu>

    * === Released 0.6.97 ===

    medit now uses system pcre library if present; FAM support is disabled.

    Allow adding tools into different menus.
    Added gnuplot syntax highlighting.
    Fixed python output pane: it now jumps to correct line in error
    messages, and it uses Stop button.
    Added gui for setting per-language settings in Preferences dialog.